# News-Automation

./: .env.example  .gitignore  README.md  alembic.ini  app.py  pyproject.toml  requirements.txt
config/: logging_config.py  settings.py
data/uploads/: .gitkeep
logs/: .gitkeep
migrations/: env.py
migrations/versions/: 7e0a00d19520_initial.py
src/: __init__.py
src/application/: __init__.py
src/application/dtos/: __init__.py  news_dto.py
src/application/services/: __init__.py  ai_review_service.py  docx_service.py  ia_service.py  news_service.py  publication_service.py
src/application/use_cases/: __init__.py  parse_docx_use_case.py  publish_news_use_case.py  review_news_use_case.py  select_news_use_case.py
src/domain/: __init__.py
src/domain/entities/: news.py  publication.py
src/domain/interfaces/: __init__.py  ai_client.py  news_repository.py  publication_repository.py
src/infrastructure/: __init__.py
src/infrastructure/ai/: __init__.py  openai_client.py
src/infrastructure/automation/: __init__.py  portal_automation.py  site_publisher.py
src/infrastructure/database/: __init__.py  models.py  session.py
src/infrastructure/parsers/: __init__.py  news_parser.py
src/infrastructure/repositories/: __init__.py  news_repository.py  publication_repository.py
src/presentation/: __init__.py
src/presentation/components/: __init__.py  news_card.py
src/presentation/pages/: __init__.py  publish_page.py  review_page.py  select_news_page.py  upload_page.py
tests/: conftest.py
tests/integration/: test_full_flow.py  test_streamlit_ui.py
(+14 files in other folders)
