[tool.poetry]
name = "news-automation"
version = "0.1.0"
description = "Sistema de automação de publicação de notícias em portais"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.40.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
playwright = "^1.48.0"
openai = "^1.54.0"
python-docx = "^1.1.0"
python-dotenv = "^1.0.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
